--- a/index.html
+++ b/index.html
@@ -1,3 +1,84 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>QR Counter PWA</title>
+
+  <!-- PWA -->
+  <link rel="manifest" href="manifest.json">
+  <meta name="theme-color" content="#0275d8">
+  <link rel="apple-touch-icon" href="icon-192.png">
+
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      margin: 0;
+      background: #f6f6f6;
+      text-align: center;
+    }
+
+    h2 {
+      margin-bottom: 10px;
+    }
+
+    #qr {
+      margin: 20px 0;
+    }
+
+    #numero {
+      font-size: 22px;
+      letter-spacing: 2px;
+      margin-bottom: 20px;
+    }
+
+    button {
+      padding: 14px 20px;
+      margin: 6px;
+      font-size: 16px;
+      border: none;
+      border-radius: 8px;
+      font-weight: bold;
+      cursor: pointer;
+      transition: 0.2s ease;
+    }
+
+    button:active {
+      transform: scale(0.96);
+    }
+
+    .restar {
+      background: #d9534f;
+      color: white;
+    }
+
+    .sumar {
+      background: #5cb85c;
+      color: white;
+    }
+
+    .copiar {
+      background: #0275d8;
+      color: white;
+    }
+
+    .scanner {
+      background: #f0ad4e;
+      color: white;
+    }
+
+    #reader {
+      width: 300px;
+      margin-top: 20px;
+      display: none;
+    }
+  </style>
+</head>
 <body>
 
   <h2>QR dinámico</h2>
@@ -6,24 +87,30 @@
 
   <h3 id="numero"></h3>
 
-  <button class="restar" onclick="restar()">Restar</button>
-  <button class="copiar" onclick="copiar()">Copiar</button>
-  <br><br>
-  <button class="sumar" onclick="sumar()">Sumar</button>
+  <div>
+    <button class="restar" onclick="restar()">Restar</button>
+    <button class="copiar" onclick="copiar()">Copiar</button>
+    <button class="sumar" onclick="sumar()">Sumar</button>
+  </div>
 
-  <br><br>
+  <br>
+
   <!-- BOTÓN SCANNER -->
-  <button onclick="iniciarScanner()">Escanear QR</button>
+  <button class="scanner" onclick="iniciarScanner()">
+    Escanear QR
+  </button>
 
   <!-- Contenedor cámara -->
-  <div id="reader" style="width:300px; margin-top:20px; display:none;"></div>
+  <div id="reader"></div>
 
-  <!-- Librería QR generator -->
+  <!-- Librería para generar QR -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/qrious/4.0.2/qrious.min.js"></script>
 
-  <!-- Librería QR scanner -->
+  <!-- Librería para escanear QR -->
   <script src="https://unpkg.com/html5-qrcode" type="text/javascript"></script>
 
+  <!-- Tu JS -->
   <script src="app.js"></script>
 
 </body>
+</html>
